# ExPeCoN_ms

./: .gitignore  LICENSE  README.md  Rpackages_expecon_ms_inclversions.csv  covariance_prestim.cov  environment.yml  expecon.yml  expecon_3.9.yaml  expecon_3.9.yml  expecon_ms_env.yml  pyproject.toml  requirements.txt  setup.py
analysis_code/behav/: EDA_report.py  behavior_glmm.R  brain_behavior_glmm.R  brms.R  corr_sdt.py  figure1.py  make_figure1grid.py  plot_behavioral_data_expecon.py  plot_mediation_lavaan.py  prepare_for_modelling.R  prepare_power_per_trial_for_glmm.R  regression_analysis.R
analysis_code/behav/R/: brain_behavior_glmm.R  brain_behavior_glmm_fit_with_brms.R
analysis_code/behav/R/mediation/: lavaan_mediation.R  mediation-package.R
analysis_code/behav/linear_mixed_models/: conf_acc.rda  cue_lag_int_conf_model.rda  cue_prevconf.rda  resp_conf.rda  sdt_cue.rda  sdt_cue_prevchoice.rda  sdt_cue_prevchoice_int.rda
analysis_code/behav/misc/: plot_behavioral_data_expecon.py  raincloud_expecon.py
analysis_code/behav/python/: figure1.py
analysis_code/behavioral_data_analysis/: figure1.py
analysis_code/eeg/preprocessing/: ica.py  prepro.py
analysis_code/eeg/sensor/: evokeds.py  tfr_contrasts.py  tfr_trial.py
analysis_code/eeg/sensor/evokeds/: evokeds.py
analysis_code/eeg/sensor/tfr/: calc_PSD_and_fooof_params.py  evokeds.py  high_low_evoked.stc-lh.stc  high_low_evoked.stc-rh.stc  power_per_trial.py  stc_highlow_evoked.stc-lh.stc  stc_highlow_evoked.stc-rh.stc  tf_stats.py  tfr.py  tfr_contrasts.py  tfr_trial.py
analysis_code/eeg/sensor/unused_scripts/: plot_3D_cluster_permutation_test.py
analysis_code/eeg/simulations/: permute_trial_sequences.py  wavelets_prestin_Iemietal.m
analysis_code/eeg/source/: save_source_reco_files.py  setup_forward_solution.py  source_band_power.py  source_reco.py  source_reco_eLORETA_from_cluster_in_sensor_space.py
analysis_code/eeg/source_reconstruction/: dics_source_power.py  source_band_power.py  source_reco.py
analysis_code/permutation_tests/: cluster_correlation.py
analysis_code/untracked/misc/: mixed_models.R
analysis_code/untracked_analysis_scripts_behav/misc/: EDA_report.py  analyze_limesurvey.py  brain_behavior_glmm_fit_with_brms.R  lavaan_mediation.R  plot_behavioral_data_expecon.py  plot_mediation_lavaan.py  prev_choice.py
analysis_code/untracked_analysis_scripts_behav/plot_models/: bayes_psychometric.py
analysis_code/untracked_analysis_scripts_eeg/evoked/: evokeds.py
analysis_code/untracked_analysis_scripts_eeg/simulations/: plot_oscillation.py
analysis_code/untracked_analysis_scripts_eeg/source/: source_band_power.py
analysis_code/untracked_analysis_scripts_eeg/tfr/: tfr_misc.py
code/: README.md  README_code.md
code/Rscripts/GLMM/: 1_prepare_power_per_trial_for_glmm.R  2_source_brain_behavior_glmm_figure4and5.R  behavior_glmm.R  brain_behavior_glmm.R  plot_GLMM_output.R  prepare_power_per_trial_for_glmm.R  sensor_brain_behavior_glmm.R  source_brain_behavior_glmm.R
code/Rscripts/behav/GLMM/: brain_behavior_glmm.R  prepare_power_per_trial_for_glmm.R
code/Rscripts/behav/mediation/: mediation-package.R
code/Rscripts/mediation/: mediation-package.R  mediation_modelling_figure6.R  source_mediation.R
code/Rscripts/utils/: get_rpackages_and_versions.R
code/behav/: clean_bb.csv  make_figure1grid.py  plot_behavioral_data_expecon.py  prepare_for_modelling.R  raincloud_expecon.py
code/configs/: config.toml
code/eeg/preprocessing/: ica.py  prepro.py
code/eeg/sensor/tfr/: brain_behavior.py  tfr.py  (+3 more)
code/eeg/source_reconstruction/: source_reco.py
code/expecon_ms/: __init__.py  configs.py  dataset.py  main.py  test_utils.py  utils.py
code/expecon_ms/behav/: behavioural_descriptives_stats_figure2.py  corr_sdt.py  figure1.py  model_free_interaction_analysis_supplfig5.py  review_behaviour.py  statistical_analysis_SDT_reaction_time.py
code/expecon_ms/eeg/: __init__.py
code/expecon_ms/utils/: anonymize_behav_data.py
code/experimental_code/expeco/: intervals.m  save_exp.m  seq.m  setup.m
code/notebooks/: expecon_ms.ipynb
code/tests/: __init__.py  test_expecon_ms.py
exp_code/expeco/: log_detection.m  save_loc.m
experimental_code/: exp_init_NI_new.m  expeco.m  expecon.m  expecon_single_trial.m
experimental_code/assets/func/: aio_close.m  aio_setup.m  aio_setup_NI.m  aio_setup_NI_new.m  aio_test.m  apply_pulse_1F.m  apply_pulse_1F_new.m  apply_pulse_1F_test.m  apply_pulse_2F.m  count_resp_new.m  dio32_setup.m  dio_setup.m  dlg_intensities.m  keypress.m  load_images.m  parallel_button.m  participant_data.m  rectpulse.m  round_dec.m  set_rng_state.m  show_instr_img.m  wait_for_scanner.m
experimental_code/expeco/: cmp_cond.m
experimental_code/expecon_single_trial/: intervals.m  log_detection.m  run_exp.m  run_exp_train.m  run_loc.m  run_resting_state.m  save_exp.m  save_loc.m  setup.m
experimental_code/thr1F/: thr1F_loop.asv  thr1F_loop.m  thr1F_loop_expeco.m  thr1F_run.m  thr1F_run_expeco.m  thr1F_setup_expeco.m  thr1F_setup_expeco_2.m
experimental_code_miniblock/: README.md  exp_re_init_NI_new.m  expeco.m
experimental_code_miniblock/assets/func/: apply_pulse_1F_new.m  dio_setup.m
experimental_code_single_trial/: exp_init_NI_new.m  expecon.m  expecon_single_trial.m
experimental_code_single_trial/assets/func/: aio_setup_NI.m  aio_setup_NI_new.m  aio_test_NI.m  apply_pulse.m  apply_pulse_1F.m  apply_pulse_1F_new.m  apply_pulse_1F_test.m  apply_pulse_2F.m  count_resp_cond.m  count_resp_new.m  dlg_1intensity.m  load_ai_logfiles.m  rectpulse2.m
experimental_code_single_trial/expecon/: intervals.m  run_exp.m  run_loc.m  run_resting_state.m  setup.m
experimental_code_single_trial/expecon_single_trial/: intervals.m  log_detection.m  run_exp.m  run_exp_train.m  run_loc.m  run_resting_state.m  save_exp.m  save_loc.m  seq.m  setup.m
experimental_code_single_trial/thr1F/: thr1F_intervals.m  thr1F_loop.asv  thr1F_loop.m  thr1F_loop_expeco.m  thr1F_run.m  thr1F_run_expeco.m  thr1F_save.m  thr1F_setup_expeco.m  thr1F_setup_expeco_2.m
figs/manuscript_figures/Figure2/: logReg
(+13 files in other folders)
